# google_domains_dns_client

./: .gitignore  Cargo.toml  README.md  example.env.toml
src/: main.rs
