[package]
name = "google_domains_dynamic_dns_client"
version = "0.1.0"
authors = ["Iain Maitland <iain@iainmaitland.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.7"
